tests/base/invalid/ListSublist_CompileFail_1.whiley
void System::main([string] args):
    list = [1,2,3]
    sublist = list[-1:2]
    print str(list)
    print str(sublist)
